# libterm

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md
.no-vibe/: session.md
.no-vibe/data/: ai-notes.json  mistakes.json
.no-vibe/data/sessions/: libterm-windows-platform-gaps.json  windows-compatibility-basics.json  windows-render-perf-and-bugfixes.json
.no-vibe/notes/: 2026-05-05-windows-render-perf-and-bugfixes.md
cmake/: CompilerWarnings.cmake  LibtermConfig.cmake.in
examples/: CMakeLists.txt  bench_present.c  hello.c  keyboard.c  paint.c
include/libterm/: libterm.h
src/: CMakeLists.txt  internal.h  platform.h
src/intrinsics/: avx2.c  avx512.c  common.h  diff.h  neon.c  rvv.c  scalar.c  sve.c
src/lib/: arena.h
src/platform/posix/: plat_init.c  plat_input.c  plat_output.c  plat_resize.c  plat_select.c
src/platform/windows/: plat_init.c  plat_input.c  plat_keys.c  plat_output.c  plat_resize.c  win_internal.h
src/shared/: api.c  buffer.c  cell.c  errors.c  input.c  output.c  utf8.c
tests/: CMakeLists.txt  test_api.c  test_buffer.c  test_utf8.c
